feito a recomentação URI